build_errors.txt
    Checking axur-core v0.1.0 (C:\Users\maiso\.gemini\antigravity\playground\azimuthal-opportunity\axur-web\crates\core)
error[E0432]: unresolved import `crate::ui`
 --> crates\core\src\api\retry.rs:5:5
  |
5 | use crate::ui;
  |     ^^^^^^^^^ no `ui` in the root

error[E0432]: unresolved import `super::OfflineAssets`
 --> crates\core\src\report\html.rs:5:5
  |
5 | use super::OfflineAssets;
  |     ^^^^^^^^^^^^^^^^^^^^ no `OfflineAssets` in `report`

error[E0432]: unresolved import `regex`
  --> crates\core\src\api\report.rs:11:5
   |
11 | use regex::Regex;
   |     ^^^^^ use of undeclared crate or module `regex`

error[E0433]: failed to resolve: use of undeclared crate or module `base64`
  --> crates\core\src\api\report.rs:12:5
   |
12 | use base64::{Engine as _, engine::general_purpose};
   |     ^^^^^^ use of undeclared crate or module `base64`

error[E0432]: unresolved import `base64`
  --> crates\core\src\api\report.rs:12:5
   |
12 | use base64::{Engine as _, engine::general_purpose};
   |     ^^^^^^ use of undeclared crate or module `base64`

error[E0433]: failed to resolve: use of undeclared crate or module `tokio`
   --> crates\core\src\api\report.rs:794:9
    |
794 |     ) = tokio::join!(
    |         ^^^^^ use of undeclared crate or module `tokio`

error[E0433]: failed to resolve: use of undeclared crate or module `tokio`
   --> crates\core\src\api\report.rs:738:9
    |
738 |     ) = tokio::join!(
    |         ^^^^^ use of undeclared crate or module `tokio`

error[E0433]: failed to resolve: use of undeclared crate or module `tokio`
  --> crates\core\src\api\retry.rs:49:17
   |
49 |                 tokio::time::sleep(delay).await;
   |                 ^^^^^ use of undeclared crate or module `tokio`

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `axur-core` (lib) due to 8 previous errors
